# llm-council

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20251225_0000-initial_schema_users_conversations_messages_costs_user_config.py
backend/: cache.py  config.py  context.py  cost_tracking.py  database.py  export.py  main.py  models.py  openrouter.py  schemas.py
backend/api/: __init__.py  config.py  export.py
backend/auth/: __init__.py  dependencies.py  routes.py  service.py
backend/providers/: __init__.py  base.py  chutes_provider.py  huggingface_provider.py  openrouter_provider.py  registry.py
docs/: DEPLOYMENT.md  DOCKER.md
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/src/: App.css  index.css
frontend/src/components/: ChatInterface.css  Sidebar.css  Stage1.css  Stage2.css  Stage3.css
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_config_api.py  test_cost_tracking.py  test_council.py  test_database.py  test_export.py  test_openrouter.py  test_provider_implementations.py  test_providers.py  test_storage.py
